# micrograd-cpp

./: .gitignore  README.md  a.out  blog.md  meson.build  micrograd  micrograd.cpp  micrograd.h  multigram.cpp  mymlp  test  test.cpp
include/: activation.hpp  error.hpp  nn.hpp  normalizer.hpp  ops.hpp  value.hpp
src/: error.cpp  nn.cpp  normalizer.cpp  ops.cpp  value.cpp
